Closed Bug 1725371 Opened 4 years ago Closed 4 years ago

Reenable Gnome subsurface workaround

Categories

(Core :: Graphics: WebRender, defect)

Firefox 93
defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- unaffected
firefox93 --- fixed

People

(Reporter: rmader, Assigned: rmader)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 1722450 removed a Gnome specific workaround that avoided a crash in Mutter, we need to reenable it until the fix[1] reached users.

1: https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/1958

See Also: → 1721298

This workaround was removed in D121650. Unfortunately we need it
a bit longer until the Mutter fix reaches users, as triggering it
crashes the whole desktop.

Set release status flags based on info from the regressing bug 1722450

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: