Bug 1725371 - Reenable Gnome subsurface workaround,

This workaround was removed in D121650. Unfortunately we need it
a bit longer until the Mutter fix reaches users, as triggering it
crashes the whole desktop.

Differential Revision: https://phabricator.services.mozilla.com/D122460